Реализовать подход по статистике событий